# TestTasks

Dixygroup/: challenge.py
Dixygroup/task_2/: Задание Excel.xlsx
Domconnect/: main.py  req.txt
Ntech/: CMakeLists.txt  Makefile  README.md  matrix.h
Ntech/matrix/: matrix.cpp
Ntech/tests/: tests.h  tests_matrix_worker.cpp  tests_methods_transpose.cpp  tests_operator_eq.cpp
PRO/: server  server.c  start.sh
Papyc/: README.md
Papyc/task0/: Makefile  list.cc  list.h  main.cc
Papyc/task0/src/: list.cc  list.h
Papyc/task0/test/: CMakeLists.txt  tests.cc
Papyc/task1/: Makefile  main.cc
Papyc/task2/: Makefile  main.cc
TopSystems/: Makefile  main.cpp
TopSystems/Font/: COPYRIGHT.txt
TopSystems/source/: button.cpp  button.h  painter.cpp  painter.h
